--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,6 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.4.0 # Última versão estável compatível
+    rev: v0.4.0
     hooks:
-      - id: ruff
-        name: ruff (lint)
-        args: ["check"]
-
       - id: ruff-format
         name: ruff (format)
